updating image sizing and overlay location

--- a/static/assets/css/rink-style.css
+++ b/static/assets/css/rink-style.css
@@ -31,3 +31,13 @@
 .danger-line{
     stroke: gray;
 }
+
+.wrapper {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: -60px;
+  left: -200px;
+}
