framing - py work (game1)

--- a/finals/css/style.css
+++ b/finals/css/style.css
@@ -57,3 +57,11 @@ background-color: #4ea0da;
 content: '✔';
 margin-right: 5px;
 }
+
+iframe {
+border: none;
+overflow: hidden;
+margin-top: -14675px;
+height: 15200px;
+width:100%;
+}
