displaying entire notebook with iframe without nbviewer menubar

--- a/finals/css/style.css
+++ b/finals/css/style.css
@@ -60,8 +60,10 @@ margin-right: 5px;
 
 iframe {
 border: none;
-overflow: hidden;
-margin-top: -14675px;
-height: 15200px;
+/* overflow: hidden; */
+/* margin-top: -14675px; */
+/* height: 15200px; */
+margin-top: -10%;
+height: 130%;
 width:100%;
 }
