display entire notebook

--- a/finals/css/style.css
+++ b/finals/css/style.css
@@ -63,7 +63,7 @@ border: none;
 /* overflow: hidden; */
 /* margin-top: -14675px; */
 /* height: 15200px; */
-margin-top: -10%;
-height: 130%;
+/* margin-top: -10%; */
+height: 100%;
 width:100%;
 }
