--- a/finals/css/style.css
+++ b/finals/css/style.css
@@ -64,6 +64,6 @@ border: none;
 /* margin-top: -14675px; */
 /* height: 15200px; */
 /* margin-top: -10%; */
-height: 100%;
+height: 100vh;
 width:100%;
 }
