testing hidden overflow

--- a/finals/css/style.css
+++ b/finals/css/style.css
@@ -9,6 +9,7 @@ html, body, #map {
   position: absolute;
   top: 0;
   bottom: 0; */
+  overflow: hidden;
 }
 .filter-group {
 font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
