removing iframe body outer margins

--- a/finals/css/style.css
+++ b/finals/css/style.css
@@ -10,6 +10,10 @@ html, body, #map {
   top: 0;
   bottom: 0; */
   overflow: hidden;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
 }
 .filter-group {
 font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
